src/main/resources/yaml-templates/maya-mockoon-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${pod-name}-deployment
  namespace: ${namespace}
  labels:
    app: maya-server-mockoon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${pod-name}
  template:
    metadata:
      labels:
        app: ${pod-name}
    spec:
      containers:
        - name: mockoon
          image: global-docker-hub-remote.orgartifactory.swinfra.net/mockoon/cli:3.1.0
          command: [ "mockoon-cli", "start", "--daemon-off", "--disable-log-to-file", "--data", "/mnt/account-config/${usecase-name}/mockoon-config_${usecase-name}.json","--container" ]
          ports:
            - containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: "nfs"
              mountPath: "/mnt/account-config"
              subPath: "maya/config/mockoon"
            - name: "nfs"
              mountPath: "/mnt/account-data"
              subPath: "maya/data/account"

      volumes:
        - name: "nfs"
          persistentVolumeClaim:
            claimName: "maya-volume"
