src/main/resources/yaml-templates/maya-s3mock-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${pod-name}-deployment
  namespace: ${namespace}
  labels:
    app: maya-server-s3mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${pod-name}
  template:
    metadata:
      labels:
        app: ${pod-name}
    spec:
      containers:
        - name: s3mock
          image: global-docker-hub-remote.orgartifactory.swinfra.net/adobe/s3mock
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: "nfs"
              mountPath: "/mnt"
              subPath: "maya/bin/s3mock"

      volumes:
        - name: "nfs"
          persistentVolumeClaim:
            claimName: maya-volume
