src/main/resources/yaml-templates/itom-maya-recommendation-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${pod-name}-service
  namespace: ${namespace}
spec:
  selector:
    app: ${pod-name}
  ports:
    - protocol: TCP
      port: 443
      targetPort: ${server-port}
