src/main/resources/yaml-templates/maya-azurite-svc-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${pod-name}-svc
  namespace: ${namespace}
spec:
  selector:
    app: ${pod-name}
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
