src/main/resources/yaml-templates/maya-mockoon-svc-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${pod-name}-svc
  namespace: ${namespace}
spec:
  selector:
    app: ${pod-name}
  ports:
    - protocol: TCP
      port: 443
      targetPort: ${server-port}
