src/main/resources/yaml-templates/maya-azurite-ing-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/backend-protocol: HTTP
    ingress.kubernetes.io/proxy-body-size: 4096m
    ingress.kubernetes.io/secure-backends: "false"
    kubernetes.io/ingress.class: nginx
  name: ${pod-name}-ing
  namespace: ${namespace}
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ${pod-name}-svc
                port:
                  number: 10000
            path: /${usecase-name}(/|$)(.*)
            pathType: Prefix
