src/main/resources/yaml-templates/maya-s3mock-ing-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backend-protocol: HTTP
    ingress.kubernetes.io/proxy-body-size: 4096m
    ingress.kubernetes.io/secure-backends: "false"
    kubernetes.io/ingress.class: nginx
  name: ${pod-name}-ing
  namespace: ${namespace}
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ${pod-name}-svc
                port:
                  number: 9090
            path: /${usecase-name}
            pathType: Prefix
